--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -61,7 +61,12 @@
             <p th:text="${message.message}"/>
         </div>
     </div>
-    <div class="row align-items-center justify-content-center" style="margin-top: 10px">
+    <div class="row align-items-center justify-content-center" style="margin-top: 10px" sec:authorize="isAuthenticated()">
+        <form th:action="@{/dashboard}" method="GET">
+            <button type="submit" class="btn btn-lg btn-primary">OK</button>
+        </form>
+    </div>
+    <div class="row align-items-center justify-content-center" style="margin-top: 10px" sec:authorize="isAnonymous()">
         <form th:action="@{/}" method="GET">
             <button type="submit" class="btn btn-lg btn-primary">OK</button>
         </form>
