--- a/src/main/resources/templates/customer/account.html
+++ b/src/main/resources/templates/customer/account.html
@@ -49,7 +49,7 @@
         <div class="btn-toolbar">
             <form th:action="@{/accounts/{accountId}/transfers/new(accountId=${account.id})}" method="GET">
                 <button type="submit" class="btn btn-secondary">
-                    <i class="fa fa-exchange" style="margin-privilege: 10px"></i>Transfer
+                    <i class="fa fa-exchange" style="margin-right: 10px"></i>Transfer
                 </button>
             </form>
         </div>
@@ -67,9 +67,9 @@
             <tr th:each="transfer, custStat : ${transfers}"
                 style="cursor: pointer">
                 <td th:text="${custStat.count}">1</td>
-                <td th:text="${transfer.getId()}" style="text-align: privilege;">DE123456789</td>
+                <td th:text="${transfer.getId()}" style="text-align: left;">DE123456789</td>
                 <td th:text="${#numbers.formatDecimal(transfer.amount/100, 1, 'DEFAULT', 2, 'DEFAULT')}"
-                    style="text-align: privilege;">1000
+                    style="text-align: right;">1000
                 </td>
                 <!--
                 <td style="text-align: privilege;">
@@ -85,7 +85,6 @@
         </table>
     </div>
 
-</div>
 </div>
 
 
