fixed side width and added script to customer table

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,17 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
@@ -24,44 +31,44 @@
 <div th:replace="fragments/header :: navEmpty"/>
 
 
+<div class="row align-items-center justify-content-center" style="max-width: 100%">
+    <div class="card" style="margin-top: 250px;">
+        <article class="card-body">
+            <h4 class="card-title text-center mb-4 mt-1">Sign in</h4>
+            <hr>
 
+            <!-- show notification on error -->
+            <div class="text-danger" th:if="${error != null}"><p th:text="${error}"/></div>
+            <!-- show notification of logout -->
+            <div class="text-info" th:if="${message != null}"><p th:text="${message}"/></div>
 
-    <div class="row align-items-center justify-content-center">
-            <div class="card" style="margin-top: 250px;">
-                <article class="card-body">
-                    <h4 class="card-title text-center mb-4 mt-1">Sign in</h4>
-                    <hr>
-
-                    <!-- show notification on error -->
-                    <div class="text-danger" th:if="${error != null}"><p th:text="${error}"/></div>
-                    <!-- show notification of logout -->
-                    <div class="text-info" th:if="${message != null}"><p th:text="${message}"/></div>
-
-                    <form th:action="@{/login}" method="post" th:object="${customer}">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-                                </div>
-                                <input id="InputUsername" name="username" class="form-control" placeholder="Username" type="text" required>
-                            </div> <!-- input-group.// -->
-                        </div> <!-- form-group// -->
-                        <div class="form-group">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-                                </div>
-                                <input id="InputPassword" name="password" class="form-control" placeholder="******" type="password" required>
-                            </div> <!-- input-group.// -->
-                        </div> <!-- form-group// -->
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
-                        </div> <!-- form-group// -->
-                        <!--p class="text-center"><a href="#" class="btn">Forgot password?</a></p-->
-                    </form>
-                </article>
-            </div> <!-- card.// -->
-    </div>
+            <form th:action="@{/login}" method="post" th:object="${customer}">
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                        </div>
+                        <input id="InputUsername" name="username" class="form-control" placeholder="Username"
+                               type="text" required>
+                    </div> <!-- input-group.// -->
+                </div> <!-- form-group// -->
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                        </div>
+                        <input id="InputPassword" name="password" class="form-control" placeholder="******"
+                               type="password" required>
+                    </div> <!-- input-group.// -->
+                </div> <!-- form-group// -->
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block">Login</button>
+                </div> <!-- form-group// -->
+                <!--p class="text-center"><a href="#" class="btn">Forgot password?</a></p-->
+            </form>
+        </article>
+    </div> <!-- card.// -->
+</div>
 
 </body>
 </html>
