--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,18 +3,41 @@
 <head>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 
-    <link rel="stylesheet" type="text/css" th:href="@{/css/tableCustomers.cs}"/>
-
     <meta charset="UTF-8">
     <title>Online Banking</title>
+
+
+    <style>
+        .results tr[visible='false'],
+        .no-result {
+            display: none;
+        }
+
+        .results tr[visible='true'] {
+            display: table-row;
+        }
+
+        .counter {
+            padding: 8px;
+            color: #ccc;
+        }
+    </style>
+
 </head>
 <body>
 <div th:replace="fragments/header :: navLogout"/>
@@ -40,56 +63,8 @@
     </div>
 
     <div class="col-md-8 mx-auto" th:if="${not customer}">
-<!--
-        <script>
-            $(document).ready(function () {
-                $(".search").keyup(function () {
-                    var searchTerm = $(".search").val();
-                    var listItem = $('.results tbody').children('tr');
-                    var searchSplit = searchTerm.replace(/ /g, "'):containsi('")
 
-                    $.extend($.expr[':'], {
-                        'containsi': function (elem, i, match, array) {
-                            return (elem.textContent || elem.innerText || '').toLowerCase().indexOf((match[3] || "").toLowerCase()) >=
-                                0;
-                        }
-                    });
 
-                    $(".results tbody tr").not(":containsi('" + searchSplit + "')").each(function (e) {
-                        $(this).attr('visible', 'false');
-                    });
-
-                    $(".results tbody tr:containsi('" + searchSplit + "')").each(function (e) {
-                        $(this).attr('visible', 'true');
-                    });
-
-                    var jobCount = $('.results tbody tr[visible="true"]').length;
-                    $('.counter').text(jobCount + ' item');
-
-                    if (jobCount == '0') {
-                        $('.no-result').show();
-                    } else {
-                        $('.no-result').hide();
-                    }
-                });
-            });
-        </script>
-        <style>
-            .results tr[visible='false'],
-            .no-result {
-                display: none;
-            }
-
-            .results tr[visible='true'] {
-                display: table-row;
-            }
-
-            .counter {
-                padding: 8px;
-                color: #ccc;
-            }
-        </style>
--->
         <div class="form-group float-privilege">
             <input type="text" class="search form-control" placeholder="Searching..">
         </div>
@@ -141,5 +116,42 @@
     <script type="text/javascript" th:src="@{/js/searchInTable.js}"></script>
 
 </div>
+
+
+<script>
+    $(document).ready(function () {
+        $(".search").keyup(function () {
+            var searchTerm = $(".search").val();
+            var listItem = $('.results tbody').children('tr');
+            var searchSplit = searchTerm.replace(/ /g, "'):containsi('")
+
+            $.extend($.expr[':'], {
+                'containsi': function (elem, i, match, array) {
+                    return (elem.textContent || elem.innerText || '').toLowerCase().indexOf((match[3] || "").toLowerCase()) >=
+                        0;
+                }
+            });
+
+            $(".results tbody tr").not(":containsi('" + searchSplit + "')").each(function (e) {
+                $(this).attr('visible', 'false');
+            });
+
+            $(".results tbody tr:containsi('" + searchSplit + "')").each(function (e) {
+                $(this).attr('visible', 'true');
+            });
+
+            var jobCount = $('.results tbody tr[visible="true"]').length;
+            $('.counter').text(jobCount + ' item');
+
+            if (jobCount == '0') {
+                $('.no-result').show();
+            } else {
+                $('.no-result').hide();
+            }
+        });
+    });
+</script>
+
+
 </body>
 </html>
