--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -56,7 +56,7 @@
             <p th:text="${message.message}"/>
         </div>
         <div class="alert alert-danger"  th:if="${message.messageType ==  T(de.othr.sw.bank.entity.WebsiteMessageType).Danger}">
-            <span class="glyphicon glyphicon-hand-privilege"></span> <strong th:text="${message.title}"></strong>
+            <span class="glyphicon glyphicon-hand-right"></span> <strong th:text="${message.title}"></strong>
             <hr class="message-inner-separator">
             <p th:text="${message.message}"/>
         </div>
