--- a/src/main/resources/templates/fragments/table.html
+++ b/src/main/resources/templates/fragments/table.html
@@ -27,4 +27,56 @@
     </script>
 </div>
 
+
+<div th:fragment="transferTable">
+    <table class="table table-hover" style="overflow: hidden;">
+        <thead>
+        <tr>
+            <th style="text-align: left;">Datum</th>
+            <th style="text-align: left;">Payer</th>
+            <th style="text-align: left;">Receiver</th>
+            <th style="text-align: center;">Amount</th>
+        </tr>
+        </thead>
+        <tbody>
+        <th:block th:each="transfer, rowStat: ${transfers}">
+            <tr data-toggle="collapse" th:attr="data-target='#accordion_'+${transfer.id}" class="clickable">
+                <td th:text="${{#dates.format(transfer.getDate(), 'dd.MM.yyyy')}}"></td>
+                <td th:text="${transfer.receiverAccount.customer.getFullName()}"></td>
+                <td th:text="${transfer.payerAccount.customer.getFullName()}"></td>
+                <div th:switch="${transfer.receiverAccount.getId()}">
+                    <td th:case="${account.id}" style="text-align: right;">
+							<span style="color: springgreen"
+                                  th:text="'+' + ${#numbers.formatDecimal(transfer.getAmount()/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Betrag</span><span> €</span>
+                    </td>
+                    <td th:case="*" style="text-align: right;">
+                            <span style="color: red"
+                                  th:text="'-' + ${#numbers.formatDecimal(transfer.getAmount()/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Betrag</span><span> €</span>
+                    </td>
+                </div>
+            </tr>
+
+
+            <tr th:id="'accordion_'+${transfer.id}" class="collapse" th:style="${transfer.getDateCreated() == null && transfer.getDateCreated() == ''} ? 'display:none' : ''">
+                <td colspan="4">
+                    <div th:style="${transfer.getDateCreated() == null} ? 'display:none' : 'display:block'">
+                            <span class="text-primary"
+                                  style="font-size: 14px; font-weight: bold;">Created: </span><br>
+                        <span style="font-size: 14px;"
+                              th:text="${{#dates.format(transfer.getDateCreated(), 'dd.MM.yyyy')}}"></span>
+                        <br>
+                    </div>
+                    <div th:style="${transfer.getDescription() == ''} ? 'display:none' : 'display:block'">
+                        <span class="text-primary" style="font-size: 14px; font-weight: bold;">Description: </span><br>
+                        <span style="font-size: 14px;" th:text="${transfer.getDescription()}"></span>
+                    </div>
+                </td>
+            </tr>
+
+
+        </th:block>
+        </tbody>
+    </table>
+</div>
+
 </html>
